[feature][#165590087] fix vertical spacing on InlineNotificationWithHeader

--- a/src/components/inlineNotificationWithHeader/InlineNotificationWithHeader.scss
+++ b/src/components/inlineNotificationWithHeader/InlineNotificationWithHeader.scss
@@ -38,7 +38,7 @@
   .inlineNotificationHeader {
     font-size: $medium;
     font-weight: $weight-semibold;
-    height: 21px;
+    padding-bottom: $space-0;
     display: flex;
     align-items: center;
 
@@ -60,13 +60,12 @@
   }
 
   .content {
-    margin: 18px $space-4 $space-2 $space-2;
-    // margin-top: calc($space-2 + 2px);
+    margin: 18px $space-4 18px $space-2;
     display: flex;
     flex-direction: column;
 
     .inlineNotificationText {
-      // margin: $space-2 $space-4 $space-2 $space-2;
+      padding-top: $space-0;
       font-size: $small;
       font-weight: normal;
       line-height: $line-height-medium;
